finished everything, but still have to fix the masonry layout problem, and add cards shadows

--- a/src/styles/_details.scss
+++ b/src/styles/_details.scss
@@ -78,7 +78,9 @@ article {
         max-height: 60rem;
     }
     @media (max-width: 768px) {
-        margin-bottom: 2.5rem;
+        margin-bottom: 3rem;
+        margin-left: 0%;
+        margin-right: 0%;
     }
     &__title {
         z-index: 1;
@@ -142,7 +144,7 @@ article {
         @media (max-width: 768px) {
             min-width: 100%;
             max-width: 100%;
-            margin-left: -0.25%;
+            padding-left: 0%;
             padding-right: 10%;
             min-height: 28rem;
             margin-top: -2.5rem;
@@ -171,7 +173,7 @@ article {
                 max-width: 6.4rem;
                 max-height: 6.4rem;
                 left: 0%;
-                top: 32.5rem;
+                top: 33rem;
             }
         }
         &__button {
@@ -179,7 +181,7 @@ article {
             font-size: 1rem;
             letter-spacing: 0.2rem;
             position: absolute;
-            background-color: rgba(0, 0, 0, 0.767);
+            background-color: rgba(0, 0, 0, 0.582);
             max-width: 12rem;
             padding: 1rem;
             top: 90%;
@@ -190,7 +192,7 @@ article {
             }
             @media (max-width: 768px) {
                 top: 0%;
-                left: 10%;
+                left: 7%;
             }
             &:hover {
                 cursor: pointer;
@@ -243,7 +245,7 @@ article {
             left: 1rem;
         }
         @media (max-width: 768px) {
-            font-size: 10rem;
+            font-size: 11rem;
             padding-left: 30%;
             left: 0%;
             z-index: 2;
